# reviews

./: README.md  pyproject.toml
app/: entities.py  main.py  settings.py
app/api/v1/routers/: api_router.py  reviews_router.py
app/core/db/: connection.py
app/core/db/repositories/: reviews_repository.py
app/core/services/: reviews_service.py
