[tool.poetry]
name = "reviews"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
sqlalchemy = "^2.0.42"
uvicorn = "^0.35.0"
ruff = "^0.12.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
